change file name and delete unnecessary file

--- a/table.html
+++ b/table.html
@@ -14,13 +14,13 @@
 				<div class="table">
 					<div class="thead">
 						<div class="tr">
-							<div class="th">姓名</div>
+							<div class="th text-center">姓名</div>
 							<div class="th">性別</div>
 							<div class="th">身分證字號</div>
 							<div class="th">地址</div>
 						</div>
 					</div>
-					<div class="tbody">
+					<div class="tbody text-center">
 						<div class="tr">
 							<div class="td">王小明</div>
 							<div class="td">男</div>
